--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "latest": "^0.2.0",
-    "next": "13.4.19",
+    "next": "^13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
