--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "latest": "^0.2.0",
     "next": "^13.4.19",
+    "pocketbase": "^0.19.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
