--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "latest": "^0.2.0",
     "next": "^14.0.1",
     "pocketbase": "^0.19.0",
