--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "^14.0.1",
     "pocketbase": "^0.19.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.33.1"
   }
 }
